# pepper-ai-ros2-pipeline

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  README2.md  docker-compose.yml  docker_run.sh  open_dashboard.py  start_pepper_system.sh
docker/: entrypoint.sh
src/openai_bridge/: package.xml  setup.py
src/openai_bridge/openai_bridge/: transcription_to_openai.py
src/pepper_Ps4/: package.xml  setup.py
src/pepper_audio_transcriber/pepper_audio_transcriber/: whisper_transcriber.py
src/pepper_bringup/: package.xml  setup.cfg  setup.py
src/pepper_bringup/config/: pepper_system.yaml
src/pepper_bringup/launch/: pepper_full_system.launch.py
src/pepper_bringup/pepper_bringup/: system_monitor.py
src/pepper_bringup/scripts/: open_pepper_tablet.sh
src/pepper_dashboard/: package.xml  setup.py
src/pepper_dashboard/pepper_dashboard/: pepper_dashboard_server.py
src/pepper_piper_tts/: package.xml  setup.py
src/pepper_piper_tts/pepper_piper_tts/: pepper_piper_node.py
src/pepper_speech/: package.xml  setup.cfg  setup.py
src/pepper_speech/pepper_speech/: orpheus_speech_node.py  pepper_speech_node.py
src/pepper_vlm/: package.xml  setup.py
src/pepper_vlm/pepper_vlm/: pepper_vlm_node.py
